# 13-broadcast-daw-studio

./: README.md  package-lock.json  package.json  tailwind.config.js
.trae/documents/: architecture.md  prd.md
src/: App.vue  style.css
src-tauri/: Cargo.toml  cargo_check_output.txt  gen_icons.py  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/audio_engine/: cpal_impl.rs  engine.rs  mod.rs  transport.rs
src-tauri/src/automation/: ducking.rs  mod.rs  triggers.rs
src-tauri/src/dag/: graph.rs  mod.rs  node.rs  processor.rs  topo_sort.rs
src-tauri/src/dsp/: compressor.rs  eq.rs  filter.rs  limiter.rs  mod.rs  types.rs
src-tauri/src/midi_control/: manager.rs  mod.rs  msc.rs  types.rs
src-tauri/src/shared/: mod.rs  rt_params.rs  types.rs
src-tauri/src/sync/: clock.rs  coordinator.rs  mod.rs  multicast.rs
src-tauri/src/timecode/: ltc.rs  mod.rs  types.rs
src-tauri/src/vst3_host/: host.rs  mod.rs  plugin.rs  scanner.rs
src/components/mixer/: ChannelStrip.vue  MasterSection.vue  MixerView.vue
src/components/patchbay/: PatchbayView.vue
src/components/settings/: SettingsView.vue
src/components/shared/: Fader.vue  Knob.vue  Meter.vue
src/composables/: useAudioEngine.ts
src/stores/: mixer.ts  patchbay.ts
src/types/: audio.ts  dag.ts  index.ts  plugins.ts
