[package]
name = "broadcast-daw-studio"
version = "0.1.0"
description = "Broadcast DAW Studio"
authors = ["you"]
edition = "2021"

[lib]
name = "broadcast_daw_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
cpal = "0.15"
ringbuf = "0.3"
crossbeam-channel = "0.5"
petgraph = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
parking_lot = "0.12"
uuid = { version = "1.0", features = ["serde", "v4"] }
anyhow = "1.0"
thiserror = "1.0"
biquad = "0.5"
realfft = "3.0"
thread-priority = "0.15"
libloading = "0.8"
windows-sys = { version = "0.52", features = ["Win32_System_Threading", "Win32_Foundation"] }
midir = "0.9"
socket2 = "0.5"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["socket"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
